# opengltest

./: CMakeLists.txt  game.h  main.cpp  shader.h  util.h  window.cpp  window.h
includes/glad/include/glad/: glad.c  glad.h
